# awabi

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: dic.rs  lattice.rs  lib.rs  main.rs  mecabrc.rs  tests.rs  tokenizer.rs
