[package]
name = "awabi"
version = "0.2.10"
authors = ["Hajime Nakagami <nakagami@gmail.com>"]
edition = "2021"

license = "MIT"
description = "A morphological analyzer using mecab dictionary"
repository = "https://github.com/nakagami/awabi"
readme = "README.md"
keywords = ["mecab"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
memmap = "0.7.0"
regex = "1.3.4"

clap = "2.33.0"
